# pylabwons-archive

./: .gitignore  LICENSE  pyproject.toml  requirements.txt
.github/workflows/: build-market.yml
data/log/: build.json
data/src/: BASELINE.xlsx  aftermarket.parquet  baseline.csv  baseline.parquet  fundamentals.parquet  market.parquet  marketcap.parquet  number.parquet  numbers.parquet  prices.parquet  sector.parquet  wics.parquet
data/src/html/: marketmap.html
data/src/log/: baseline-20260310.parquet  baseline-20260311.parquet  baseline-20260312.parquet  baseline-20260313.parquet  baseline-20260317.parquet  baseline-20260318.parquet  baseline-20260319.parquet  baseline-20260320.parquet  baseline-20260323.parquet  baseline-20260324.parquet  baseline-20260325.parquet  baseline-20260326.parquet  baseline-20260327.parquet  baseline-20260330.parquet
data/src/ohlcv/: 000020.parquet  000040.parquet  000050.parquet  000070.parquet  000080.parquet  000100.parquet  000120.parquet  000140.parquet  000150.parquet  000180.parquet  0001A0.parquet  000210.parquet  000220.parquet  000230.parquet  000240.parquet  000250.parquet  000270.parquet  000300.parquet  000320.parquet  000370.parquet  000390.parquet  000400.parquet  000430.parquet  000440.parquet  000480.parquet  000490.parquet  0004V0.parquet  0004Y0.parquet  000500.parquet  000520.parquet  000540.parquet  (+2627 more)
run/: build_action.py  build_colab.ipynb
scripts/: env.py
scripts/runner/: baseline.py  build_colab.ipynb  manual.ipynb
scripts/src/: baseline.ipynb  baseline.py
src/pylabwons_stub/: __init__.py  env.py
(+28 files in other folders)
